# Google-sheet-to-whatsapp

./: .gitignore  app.py  pyproject.toml  requirements.txt
WhatsAppScript/: __init__.py  download_sheet.py  output.csv  script.py
