[tool.poetry]
name = "tal"
version = "0.1.0"
description = ""
authors = ["Khaliq Salawou <khaliqsalawoudeen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pandas = "^2.2.2"
ipykernel = "^6.29.4"
httpx = "^0.27.0"
streamlit = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
